# IQ4

./: .gitignore  Dockerfile.app  Dockerfile.train  Makefile  README.md  app.py  azure-pipelines.yml  pyproject.toml  train.py
JobLogic_MLOps_Assessment/: model.pkl  sample_data.csv
airflow/dags/: data_pipeline_dag.py
k8s/: deployment.yaml  hpa.yaml  service.yaml
ops/: rotate_logs.service  rotate_logs.sh  rotate_logs.timer
resources/: model.pkl
